@@ -1,6 +1,7 @@
 package io.swagger.config;
 
 import io.swagger.model.Account;
+import io.swagger.model.Role;
 import io.swagger.model.User;
 import io.swagger.repository.AccountRepository;
 import io.swagger.repository.UserRepository;
@@ -9,6 +10,8 @@ import org.springframework.boot.ApplicationArguments;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -21,7 +24,21 @@ public class MyApplicationRunner implements ApplicationRunner {
 
     @Override
     public void run(ApplicationArguments args) throws Exception {
-        List<User> users = List.of(new User("biniam mehari", "biniam@inholland.nl", "employee", 1000.00, 500.00, 0.00));
+        User firstUser = new User();
+        firstUser.setUsername("biniam");
+        firstUser.setEmail("biniam@inholland.nl");
+        firstUser.setPassword("secret");
+        firstUser.setRoles(new ArrayList<>(Arrays.asList(Role.ROLE_USER, Role.ROLE_ADMIN)));
+
+        User user2 = new User();
+        user2.setUsername("tommy");
+        user2.setEmail("tommy@inholland.nl");
+        user2.setPassword("secret");
+        user2.setRoles(new ArrayList<>(Arrays.asList(Role.ROLE_USER)));
+
+        // create a list of user
+        List<User> users = new ArrayList<>(Arrays.asList(firstUser, user2));
+        //List<User> users = List.of(firstUser);
         userRepository.saveAll(users);
 
         // Create an account for the BANK at system startup
